styles.css
/* General Styles */
body {
  font-family: "Arial", sans-serif;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

body::-webkit-scrollbar {
  width: 12px;
}

body::-webkit-scrollbar-track {
  background-color: #fff;
}

body::-webkit-scrollbar-thumb {
  background-color: #d63031;
  border-radius: 6px;
}

body::-webkit-scrollbar-thumb:hover {
  background-color: #e448486d;
}

html {
  scroll-behavior: smooth;
}

/* Header Styles */
header {
  background-color: #74b9ff;
  color: #fff;
  text-align: center;
  padding: 1em 0;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column; /* Default layout for smaller screens */
}

.header-content {
  display: flex;
  flex-direction: column; /* Default layout for smaller screens */
  align-items: center;
  margin-right: 20px;
}

.header-text {
  text-align: center;
}

.header_H1,
.header_P {
  margin: 0;
  text-shadow: 2% 2% 4% rgba(0, 0, 0, 0.3);
}

.profile-image {
  width: 200px;
  height: 200px;
  border-radius: 50%;
  margin-top: 10px;
  margin-left: 20px;
}

/* Larger screens layout */
@media (min-width: 768px) {
  header {
    flex-direction: row;
  }

  .header-content {
    flex-direction: row;
  }

  .profile-image {
    margin-top: 0;
    margin-left: 20px;
    margin-right: 20px;
  }
}

/* Navigation Styles */
nav {
  background-color: #0984e3;
  position: sticky;
  top: 0;
  z-index: 100;
}

.navbar-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
}

nav ul {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
}

nav a {
  text-decoration: none;
  color: #fff;
  padding: 1em;
  transition: color 0.3s ease;
}

.menu-icon {
  display: none;
  flex-direction: column;
  cursor: pointer;
}

.bar {
  width: 25px;
  height: 3px;
  background-color: #fff;
  margin: 3px 0;
}

@media (max-width: 768px) {
  nav ul {
    display: none;
    flex-direction: column;
    width: 100%;
    text-align: center;
    position: absolute;
    top: 60px;
    left: 0;
    background-color: #0984e3;
    z-index: 99;
    padding-top: 20px; /* Add padding to sit above the targeted section */
  }

  nav ul.show {
    display: flex;
  }

  .menu-icon {
    display: flex;
  }

  section:not(:first-child) {
    padding-top: 80px; /* Adjust the value based on your design */
  }
}

nav a:hover {
  color: #2d3436;
}

/* Section Styles */
section {
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

/* About Me Section Styles */
section.about-section {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

/* Expertise Section Styles */
#expertise {
  text-align: center;
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

.expertise-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  grid-gap: 15px;
  justify-content: center;
  align-items: center;
}

.expertise-item {
  text-align: center;
  padding: 15px;
  border-radius: 8px;
  background-color: #3498db;
  color: #fff;
  cursor: pointer;
  transition: transform 0.3s ease-in-out;
  width: 100%;
}

/* Systems Thinking */
.expertise-item.systems-thinking {
  background-color: #3498db;
}

/* Strategic Planning */
.expertise-item.strategic-planning {
  background-color: #e74c3c;
}

/* Collaboration */
.expertise-item.collaboration {
  background-color: #27ae60;
}

/* Hover Effect */
.expertise-item:hover {
  transform: scale(1.05);
}

/* Testimonials Section Styles */
.testimonials-section {
  padding: 2em;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  margin-top: 20px;
}

.testimonial-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.testimonial-card {
  width: calc(33.33% - 20px);
  max-width: 400px;
  margin: 10px;
  padding: 10px;
  box-sizing: border-box;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  background-color: #fff;
  transition: transform 0.3s ease-in-out;
  text-align: center;
}

@media (max-width: 1200px) {
  .testimonial-card {
    width: calc(50% - 20px);
  }
}

@media (max-width: 768px) {
  .testimonial-card {
    width: calc(100% - 20px);
  }
}

.testimonial-card:hover {
  transform: scale(1.05);
}

.testimonial-image {
  width: 100px;
  height: 100px;
  object-fit: cover;
  border-radius: 50%;
  margin: 0 auto 10px;
}

.testimonial-content {
  text-align: center;
}

.testimonial-name {
  font-size: 1.2em;
  margin: 0;
}

.testimonial-title {
  color: #555;
  margin: 0;
}

.testimonial-text {
  margin-top: 10px;
}

.pagination {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}

.pagination button {
  background-color: #0984e3;
  color: #fff;
  padding: 0.5em 1em;
  margin: 5px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.pagination button:hover {
  background-color: #2d3436;
}

/* Contact Section Styles */
section#contact {
  text-align: center;
  padding: 20px;
}

form#contactForm {
  max-width: 400px;
  margin: 0 auto;
}

